# SCM-Python

./: create_python_project.sh  pyenv-pipenv  spiegazione
TEMPLATE/: LICENSE  pyproject.toml
