[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "{project_name}"
version = "0.0.1"
authors = [
  { name="{name}", email="{email}" }
]
description = ""
readme = "README.md"
requires-python = ">={python_version}"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/{username}/{project_name}"
"Bug Tracker" = "https://github.com/{username}/{project_name}/issues"
